--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         </button>
                     </div>
                 </div>
-                <video autoplay muted loop preload="auto" class="build__bg">
+                <video autoplay muted loop preload="images/build-bg.jpg" class="build__bg">
                     <source type="video/webm" src="images/build-bg.webm">
                     <source type="video/mp4" src="images/build-bg.mp4">
                 </video>
