--- a/index.html
+++ b/index.html
@@ -73,10 +73,56 @@
                         </button>
                     </div>
                 </div>
-                <video autoplay muted loop preload="images/build-bg.jpg" class="build__bg">
+                <video autoplay muted loop poster="images/build-bg.jpg" preload="auto" class="build__bg">
                     <source type="video/webm" src="images/build-bg.webm">
                     <source type="video/mp4" src="images/build-bg.mp4">
                 </video>
+            </section>
+            <section class="about">
+                <div class="container">
+                    <div class="about__inner">
+                        <div class="about__logo">
+                            <a href="index.html" class="about__logo-link">
+                                <img src="images/about-logo.svg" alt="logo" class="about__logo-img">
+                            </a>
+                        </div>
+                        <div class="about__title">
+                            <h3 class="about__section-title">
+                                Про компанію
+                            </h3>
+                            <a href="#" class="about__link">
+                                Керівництво
+                            </a>
+                            <a href="#" class="about__sublink">
+                                Чому ми?
+                            </a>
+                        </div>
+                        <div class="about__content">
+                            <p class="company__name">
+                                Львівська Компанія "ЭкоДом"
+                            </p>
+                            <din class="block__content">
+                                <div class="block__video">
+                                    <video controls preload="auto" class="company__video" id="about-video">
+                                        <source type="video/webm" src="images/about-video.webm">
+                                        <source type="video/mp4" src="images/about-video.mp4">
+                                    </video>
+                                    <button class="btn__video" id="play-btn">
+                                        <img src="images/btn-video.svg" alt="button">
+                                    </button>
+                                </div>
+                                <div class="block__company-text">
+                                    <p class="company__text">
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum accusamus, culpa sapiente sint sed quia numquam. Dicta quo vitae, corporis labore, ut sint earum ea dignissimos laborum exercitationem ab id!
+                                    </p>
+                                    <p class="company__text">
+                                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptate itaque excepturi iure soluta voluptas ut perferendis vero laudantium? Rerum, molestias ut esse totam eveniet perferendis voluptatibus! Autem omnis hic sapiente!
+                                    </p>
+                                </div>
+                            </din>
+                        <!-- </div><div class="vertical__line"></div> -->
+                    </div>
+                </div>
             </section>
         </main>
 
